--- a/.github/workflows/scan-posts.yml
+++ b/.github/workflows/scan-posts.yml
@@ -1,49 +1,51 @@
-# .github/workflows/scan-posts.yml
 name: Auto-Scan Posts
 
 on:
   push:
     paths:
-      - 'posts/**.md'   # Only trigger on .md changes
+      - 'posts/**.md'
 
 permissions:
-  contents: write   # Only allows writing to this repo (minimum needed)
-  actions: read     # Default
+  contents: write
+  actions: read
 
 jobs:
   generate-manifest:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-        with:
-          ref: ${{ github.head_ref || github.ref }}
 
-      - name: Generate posts.json (safe & simple)
+      - name: Generate posts.json
         run: |
           python3 - <<'PY'
           import os, json, re, datetime
           posts = []
-          for f in sorted(os.listdir('posts'), reverse=True):
-              if not f.endswith('.md'): continue
-              path = f"posts/{f}"
-              content = open(path, encoding='utf-8').read()
-              
-              title = (re.search(r'^#\s+(.+)', content, re.M) or [None])[0] or f.replace('.md','').replace('-',' ').title()
-              date = re.search(r'(\d{4}-\d{2}-\d{2})', f)
-              date = date.group(1) if date else datetime.date.today().isoformat()
-              
-              posts.append({"file": path, "title": title, "date": date})
-          
-          json.dump(posts, open('posts.json', 'w'), indent=2)
+          posts_dir = 'posts'
+          if os.path.exists(posts_dir):
+              files = [f for f in os.listdir(posts_dir) if f.endswith('.md')]
+              files.sort(reverse=True)  # Newest filename first
+              for f in files:
+                  path = f"{posts_dir}/{f}"
+                  try:
+                      with open(path, 'r', encoding='utf-8') as file:
+                          content = file.read()
+                      title_match = re.search(r'^#\s+(.+)', content, re.MULTILINE)
+                      title = title_match.group(1).strip() if title_match else f.replace('.md', '').replace('-', ' ').title()
+                      date_match = re.search(r'(\d{4}-\d{2}-\d{2})', f) or re.search(r'date:\s*(\d{4}-\d{2}-\d{2})', content, re.MULTILINE)
+                      date = date_match.group(1) if date_match else datetime.date.today().isoformat()
+                      excerpt_start = content.find('\n#') + 1 if content.find('\n#') > 0 else 0
+                      excerpt = content[excerpt_start:excerpt_start + 100].strip() + '...' if excerpt_start else content[:100] + '...'
+                      posts.append({"file": path, "title": title, "date": date, "excerpt": excerpt})
+                  except Exception as e:
+                      print(f"Skipped {f}: {e}")
+          with open('posts.json', 'w') as f:
+              json.dump(posts, f, indent=2)
           print(f"Generated {len(posts)} posts")
           PY
 
-      - name: Commit & push if changed
+      - name: Commit if changed
         run: |
           git config user.name "Post Scanner Bot"
           git config user.email "bot@h4ck3rfirst"
           git add posts.json
-          git diff --quiet --staged || (
-            git commit -m "Auto-update posts.json [skip ci]"
-            git push
-          )
+          git diff --staged --quiet || (git commit -m "Auto-update posts.json [skip ci]" && git push)
