--- a/.github/workflows/scan-posts.yml
+++ b/.github/workflows/scan-posts.yml
@@ -1,51 +1,59 @@
-name: Auto-Scan Posts
-
+name: Auto-Scan Posts + Tags + Categories
 on:
   push:
-    paths:
-      - 'posts/**.md'
+    paths: ['posts/**.md']
 
-permissions:
-  contents: write
-  actions: read
+permissions: contents: write
 
 jobs:
-  generate-manifest:
+  scan:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-
-      - name: Generate posts.json
+      - name: Generate posts.json with tags
         run: |
           python3 - <<'PY'
-          import os, json, re, datetime
+          import os, json, re, datetime, yaml
           posts = []
-          posts_dir = 'posts'
-          if os.path.exists(posts_dir):
-              files = [f for f in os.listdir(posts_dir) if f.endswith('.md')]
-              files.sort(reverse=True)  # Newest filename first
-              for f in files:
-                  path = f"{posts_dir}/{f}"
-                  try:
-                      with open(path, 'r', encoding='utf-8') as file:
-                          content = file.read()
-                      title_match = re.search(r'^#\s+(.+)', content, re.MULTILINE)
-                      title = title_match.group(1).strip() if title_match else f.replace('.md', '').replace('-', ' ').title()
-                      date_match = re.search(r'(\d{4}-\d{2}-\d{2})', f) or re.search(r'date:\s*(\d{4}-\d{2}-\d{2})', content, re.MULTILINE)
-                      date = date_match.group(1) if date_match else datetime.date.today().isoformat()
-                      excerpt_start = content.find('\n#') + 1 if content.find('\n#') > 0 else 0
-                      excerpt = content[excerpt_start:excerpt_start + 100].strip() + '...' if excerpt_start else content[:100] + '...'
-                      posts.append({"file": path, "title": title, "date": date, "excerpt": excerpt})
-                  except Exception as e:
-                      print(f"Skipped {f}: {e}")
-          with open('posts.json', 'w') as f:
-              json.dump(posts, f, indent=2)
-          print(f"Generated {len(posts)} posts")
-          PY
+          for f in sorted(os.listdir('posts'), reverse=True):
+              if not f.endswith('.md'): continue
+              path = f"posts/{f}"
+              content = open(path, 'r', encoding='utf-8').read()
 
-      - name: Commit if changed
+              # Category from filename
+              lower = f.lower()
+              category = 'notes'
+              if any(x in lower for x in ['htb','hackthebox']): category = 'hackthebox'
+              elif any(x in lower for x in ['thm','tryhackme']): category = 'tryhackme'
+              elif 'vulnhub' in lower: category = 'vulnhub'
+              elif 'report' in lower: category = 'reports'
+
+              # Extract frontmatter tags
+              tags = []
+              frontmatter = re.search(r'^---\s*\n(.*?)\n---', content, re.S)
+              if frontmatter:
+                  try:
+                      data = yaml.safe_load(frontmatter.group(1))
+                      tags = [t.strip() for t in data.get('tags', [])] if isinstance(data.get('tags'), list) else []
+                  except: pass
+
+              # Title & Date
+              title = re.search(r'^#\s+(.+)', content, re.M)
+              title = title.group(1).strip() if title else f.replace('.md','').replace('-',' ').title()
+              date = re.search(r'(\d{4}-\d{2}-\d{2})', f)
+              date = date.group(1) if date else datetime.date.today().isoformat()
+
+              posts.append({
+                  "file": path,
+                  "title": title,
+                  "date": date,
+                  "category": category,
+                  "tags": tags
+              })
+          json.dump(posts, open('posts.json', 'w'), indent=2)
+          PY
+      - name: Commit
         run: |
-          git config user.name "Post Scanner Bot"
-          git config user.email "bot@h4ck3rfirst"
+          git config user.name "Post Scanner"
           git add posts.json
-          git diff --staged --quiet || (git commit -m "Auto-update posts.json [skip ci]" && git push)
+          git diff --quiet --staged || (git commit -m "Update posts + tags [skip ci]" && git push)
