--- a/.github/workflows/scan-posts.yml
+++ b/.github/workflows/scan-posts.yml
@@ -1,47 +1,79 @@
 name: Auto-Scan Posts + Tags + Categories
+
 on:
   push:
-    paths: ['posts/**.md']
+    paths:
+      - 'posts/**.md'
 
-permissions: contents: write
+permissions:
+  contents: write
 
 jobs:
   scan:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Generate posts.json with tags
+
+      - name: Generate posts.json with tags & categories
         run: |
           python3 - <<'PY'
-          import os, json, re, datetime, yaml
-          posts = []
-          for f in sorted(os.listdir('posts'), reverse=True):
-              if not f.endswith('.md'): continue
-              path = f"posts/{f}"
-              content = open(path, 'r', encoding='utf-8').read()
+          import os
+          import json
+          import re
+          import datetime
+          try:
+              import yaml
+          except ImportError:
+              import subprocess
+              subprocess.check_call(["pip", "install", "pyyaml"])
+              import yaml
 
-              # Category from filename
+          posts = []
+          posts_dir = 'posts'
+
+          if not os.path.exists(posts_dir):
+              json.dump(posts, open('posts.json', 'w'), indent=2)
+              exit()
+
+          for f in sorted(os.listdir(posts_dir), reverse=True):
+              if not f.endswith('.md'):
+                  continue
+              path = f"{posts_dir}/{f}"
+              try:
+                  content = open(path, 'r', encoding='utf-8').read()
+              except:
+                  continue
+
+              # ——— Category from filename ———
               lower = f.lower()
               category = 'notes'
-              if any(x in lower for x in ['htb','hackthebox']): category = 'hackthebox'
-              elif any(x in lower for x in ['thm','tryhackme']): category = 'tryhackme'
-              elif 'vulnhub' in lower: category = 'vulnhub'
-              elif 'report' in lower: category = 'reports'
+              if any(x in lower for x in ['htb', 'hackthebox']):
+                  category = 'hackthebox'
+              elif any(x in lower for x in ['thm', 'tryhackme']):
+                  category = 'tryhackme'
+              elif 'vulnhub' in lower:
+                  category = 'vulnhub'
+              elif 'report' in lower:
+                  category = 'reports'
 
-              # Extract frontmatter tags
+              # ——— Tags from frontmatter ———
               tags = []
-              frontmatter = re.search(r'^---\s*\n(.*?)\n---', content, re.S)
-              if frontmatter:
+              fm = re.search(r'^---\s*\n(.*?)\n---', content, re.S)
+              if fm:
                   try:
-                      data = yaml.safe_load(frontmatter.group(1))
-                      tags = [t.strip() for t in data.get('tags', [])] if isinstance(data.get('tags'), list) else []
-                  except: pass
+                      data = yaml.safe_load(fm.group(1))
+                      raw_tags = data.get('tags', [])
+                      if isinstance(raw_tags, list):
+                          tags = [str(t).strip() for t in raw_tags]
+                  except:
+                      pass
 
-              # Title & Date
-              title = re.search(r'^#\s+(.+)', content, re.M)
-              title = title.group(1).strip() if title else f.replace('.md','').replace('-',' ').title()
-              date = re.search(r'(\d{4}-\d{2}-\d{2})', f)
-              date = date.group(1) if date else datetime.date.today().isoformat()
+              # ——— Title & Date ———
+              title_match = re.search(r'^#\s+(.+)', content, re.M)
+              title = title_match.group(1).strip() if title_match else f.replace('.md','').replace('-',' ').title()
+
+              date_match = re.search(r'(\d{4}-\d{2}-\d{2})', f)
+              date = date_match.group(1) if date_match else datetime.date.today().isoformat()
 
               posts.append({
                   "file": path,
@@ -50,10 +82,15 @@ jobs:
                   "category": category,
                   "tags": tags
               })
+
           json.dump(posts, open('posts.json', 'w'), indent=2)
           PY
-      - name: Commit
+
+      - name: Commit & push posts.json if changed
         run: |
-          git config user.name "Post Scanner"
+          git config user.name "Auto Scanner Bot"
+          git config user.email "bot@h4ck3rfirst"
           git add posts.json
-          git diff --quiet --staged || (git commit -m "Update posts + tags [skip ci]" && git push)
+          git diff --quiet --staged || (
+            git commit -m "Auto-update posts.json [skip ci]" && git push
+          )
